--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# executables
+server
+client
+/notes/server
+/notes/client
 
 # Created by https://www.gitignore.io/api/c,c++,sublimetext,windows,linux,qt
 
@@ -156,5 +161,3 @@ Makefile*
 
 # QtCtreator CMake
 CMakeLists.txt.user
-
-
